Fix live not showing events

--- a/src/styles/live/full.scss
+++ b/src/styles/live/full.scss
@@ -12,6 +12,7 @@
 
 	.events-fancy {
 		width: 100%;
+		top: 0;
 		margin-left: 0;
 		margin-right: 0;
 		position: fixed;
